src/ic-cdk-macros/tests/compile_fail/lifecycle_functions_should_have_no_return.stderr
error: #[init] function cannot have a return value.
 --> tests/compile_fail/lifecycle_functions_should_have_no_return.rs:3:1
  |
3 | #[init]
  | ^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[pre_upgrade] function cannot have a return value.
 --> tests/compile_fail/lifecycle_functions_should_have_no_return.rs:6:1
  |
6 | #[pre_upgrade]
  | ^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[post_upgrade] function cannot have a return value.
 --> tests/compile_fail/lifecycle_functions_should_have_no_return.rs:9:1
  |
9 | #[post_upgrade]
  | ^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[heartbeat] function cannot have a return value.
  --> tests/compile_fail/lifecycle_functions_should_have_no_return.rs:12:1
   |
12 | #[heartbeat]
   | ^^^^^^^^^^^^
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[inspect_message] function cannot have a return value.
  --> tests/compile_fail/lifecycle_functions_should_have_no_return.rs:15:1
   |
15 | #[inspect_message]
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
